--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "categories": [
     "Other"
   ],
+  "icon": "icon.png",
   "activationEvents": [
     "onCommand:change-to-language-mode.changeToHTML",
     "onCommand:change-to-language-mode.changeToJavaScript",
