--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "change-to-language-mode",
-  "displayName": "change-to-language-mode",
-  "description": "",
-  "version": "0.0.4",
+  "displayName": "Change To Language Mode",
+  "description": "Provides JUST one command to Change Language Mode.",
+  "version": "0.0.5",
   "publisher": "NferZhuang",
   "license": "MIT",
   "engines": {
-    "vscode": "^1.56.0"
+    "vscode": "^1.50.0"
   },
   "repository": {
     "type": "git",
